# ecewo-example

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.c
src/contexts/: context.c  context.h
src/db/: connection.c  connection.h  db.c  db.h
src/handlers/: handlers.h  sync_handlers.c
src/handlers/del_handlers/: del_category.c  del_post.c
src/handlers/get_handlers/: get_all_posts.c  get_all_users.c  get_post.c  get_posts_by_cat.c  get_profile.c
src/handlers/post_handlers/: create_category.c  create_post.c  login.c  register.c
src/handlers/put_handlers/: edit_category.c  edit_post.c
src/helpers/: json_helper.h
src/middlewares/: middlewares.c  middlewares.h
src/routers/: routers.c  routers.h
src/utils/: utils.c  utils.h
vendors/: dotenv.c  dotenv.h  pquv.h  session.c  session.h  slugify.c  slugify.h
vendors/modules/: ecewo-postgres.c  ecewo-postgres.h
